# drf-simple-api-errors

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml  publish.yaml
drf_simple_api_errors/: __init__.py  apps.py  exception_handler.py  exceptions.py  extra_handlers.py  formatter.py  handlers.py  settings.py  types.py  utils.py
drf_simple_api_errors/integrations/: spectacular.py
integration_tests/: manage.py
integration_tests/settings/: django.py
integration_tests/test_app/: conftest.py  factories.py  tests.py  utils.py
test_project/: pytest.ini
test_project/config/: settings.py
test_project/test_app/: models.py  tests.py  utils.py
tests/: test_exception_handler.py  test_extra_handlers.py  test_formatter.py  test_hadlers.py  test_utils.py  utils.py
tests/integrations/: test_spectacular.py
